<resources>
    <string name="Title">WiseMind</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="btnSignin">Sign in</string>
    <string name="logo">WiseMind</string>
    <string name="title2">Create your account</string>
    <string name="newUsername">Enter Username</string>
    <string name="newPassword">Enter Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="btnCreateAccount">Create my account</string>
    <string name="app_name">WiseMind</string>
    <string name="diarycard">DiaryCard</string>
    <string name="diary_card">Diary Card</string>
    <string name="title_activity_form">Form</string>
    <string name="select_the_skill_you_used">Select the skill you used:</string>
    <string name="why_did_you_use_this_skill">Why did you use this skill?</string>
    <string name="how_did_you_use_this_skill">How did you use this skill?</string>
    <string name="how_did_it_help_you">How did it help you?</string>
    <string name="submit">Submit</string>
    <string name="distress_tolerance">Distress Tolerance</string>
    <string name="emotion_regulation">Emotion Regulation</string>
    <string name="mindfulness">Mindfulness</string>
    <string name="interpersonal_effectiveness">Interpersonal Effectiveness</string>
    <string name="radiobutton">RadioButton</string>
    <string name="soothe_with_senses">ACCEPTS</string>
    <string name="accepts">ACCEPTS</string>
    <string name="radical_acceptance">TIPP</string>
    <string name="improve_the_moment">IMPROVE</string>
    <string name="prosandcons">Pros and Cons List</string>
    <string name="selfsoothe">Self Soothe</string>
    <string name="radicalacceptance">Radical Acceptance</string>
    <string name="aplease">A PLEASE</string>
    <string name="bplease">B PLEASE</string>
    <string name="cplease">C PLEASE</string>
    <string name="wise_mind">Wise Mind</string>
    <string name="stopp">Emotional Mind</string>
    <string name="dearman">DEARMAN</string>
    <string name="give">GIVE</string>
    <string name="past">FAST</string>
    <string name="think">THINK</string>
    <string name="btnInfo">Regain control of your life and symptoms......                                 Learn More</string>
    <string name="btnToCreate">Create an account</string>
    <string name="btnToSign">Sign in</string>
</resources>
