<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccount"
    android:background="#40485f">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="102dp"
        android:layout_height="91dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="15dp"
        app:srcCompat="@drawable/wisemanlogosmall" />

    <TextView
        android:id="@+id/logo"
        android:layout_width="191dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="71dp"
        android:layout_marginTop="51dp"
        android:fontFamily="@font/muli"
        android:gravity="left"
        android:text="@string/logo"
        android:textColor="#f7f7f7"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="285dp"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="59dp"
        android:layout_marginTop="159dp"
        android:fontFamily="@font/muli"
        android:gravity="center"
        android:text="@string/title2"
        android:textColor="#f7f7f7"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="244dp"
        android:background="#f7f7f7"
        android:ems="10"
        android:hint="@string/newUsername"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/editText"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="202dp"
        android:background="#f7f7f7"
        android:ems="10"
        android:hint="@string/newPassword"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="132dp"
        android:background="#f7f7f7"
        android:ems="10"
        android:hint="@string/confirmPassword"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="103dp"
        android:layout_marginBottom="68dp"
        android:text="@string/btnCreateAccount" />
</RelativeLayout>