<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen"
    android:background="#40485f">

    <TextView
        android:id="@+id/title"
        android:layout_width="201dp"
        android:layout_height="69dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="128dp"
        android:layout_marginTop="117dp"
        android:fontFamily="@font/muli"
        android:text="@string/Title"
        android:textColor="#f7f7f7"
        android:textSize="40sp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="204dp"
        android:layout_height="109dp"
        android:layout_alignBottom="@+id/title"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="-20dp"
        app:srcCompat="@drawable/wisemanlogosmall" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/password"
        android:layout_alignParentTop="true"
        android:layout_marginTop="233dp"
        android:background="#f7f7f7"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="205dp"
        android:background="#f7f7f7"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnSignin"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="136dp"
        android:gravity="center"
        android:text="@string/btnSignin" />

</RelativeLayout>