<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen"
    android:background="@color/DarkBlue">

    <Button
        android:id="@+id/btnInfo"
        android:layout_width="203dp"
        android:layout_height="181dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="207dp"
        android:text="@string/btnInfo"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnToCreate"
        android:layout_width="159dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="97dp"
        android:text="@string/btnToCreate"
       />

    <Button
        android:id="@+id/btnToSign"
        android:layout_width="159dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:text="@string/btnToSign"
       />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="159dp"
        android:layout_height="126dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="101dp"
        android:layout_marginTop="74dp"
        android:foregroundGravity="center"
        app:srcCompat="@mipmap/ic_launcher_round" />
</RelativeLayout>